--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -33,9 +33,9 @@ body {
 
 	height: 100%;
 	line-height: 1;
-	background: #fafafa;
+	background: #ebebeb;
 	font-size: 1.4rem;
-	color: #252b42;
+	color: $text-color;
 	font-weight: 500;
 	font-family: Montserrat, Arial, Helvetica, sans-serif;
 }
