--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,7 +1,10 @@
 $white: #fff;
-$black: #000;
-$primary: #e0e41b;
+$black: rgb(0, 0, 0);
+$primary: #16b93f;
 $green: #00AF2C;
+$text-color: #000;
+$text-color2: #fff;
+
 
 $clip-path: polygon(15% 0, 90% 0, 85% 100%, 10% 100%);
 
