--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -115,7 +115,7 @@
         p {
             text-align: center;
             padding: 2rem;
-            color: $white;
+            color: $text-color2;
             flex: 1 1 auto;
         }
     }
