--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -17,7 +17,7 @@
         height: 70%;
         width: 70%;
         background-color: $white;
-        color: $black;
+        color: $text-color;
         transition: all 0.3s ease 0s;
 
         @include breakpoint($tablet) {
@@ -55,7 +55,7 @@
         position: absolute;
         color: $black;
         top: -13;
-        right: 13;
+        right: 0;
         font-size: 3rem;
         cursor: pointer;
 
@@ -87,23 +87,29 @@
         }
 
         button {
-            color: $black;
-            font-weight: 600;
+            color: $text-color;
             margin-top: 3rem;
             background: $primary;
-            padding: 1rem 2rem;
+            width: 50%;
+            padding: 1rem 0;
             cursor: pointer;
             box-shadow: 0 2px 5px rgba($black, .8);
-            border-radius: 5px;
+            // border-radius: 5px;
             transition: all 0.2s ease 0s;
 
             &:hover {
                 transform: translateY(-5%);
+                background: lighten($primary, 5);
                 box-shadow: 0 3px 7px rgba($black, .8);
             }
             &:active {
                 transform: translateY(2%);
                 box-shadow: 0 1px 3px rgba($black, .8);
+            }
+
+            @include breakpoint($tablet) {
+                width: 100%;
+    
             }
         }
     }
