--- a/sass/_slider.scss
+++ b/sass/_slider.scss
@@ -37,6 +37,7 @@
 
   &-item {
     position: relative;
+    color: $text-color;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -48,7 +49,7 @@
   }
 
   h3 {
-    color: $black;
+    color: inherit;
   }
 
   &-btn {
