--- a/css/style.css
+++ b/css/style.css
@@ -394,7 +394,7 @@ html,
 body {
   height: 100%;
   line-height: 1;
-  background: #ebebeb;
+  background: #e6e6e6;
   font-size: 1.4rem;
   color: #000;
   font-weight: 500;
