--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -33,7 +33,7 @@ body {
 
 	height: 100%;
 	line-height: 1;
-	background: #ebebeb;
+	background: #e6e6e6;
 	font-size: 1.4rem;
 	color: $text-color;
 	font-weight: 500;
