--- a/css/style.css
+++ b/css/style.css
@@ -842,6 +842,8 @@ html {
   width: 70%;
   background-color: #fff;
   color: #000;
+  -webkit-transform: translateY(-50px);
+          transform: translateY(-50px);
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
