--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -18,6 +18,7 @@
         width: 70%;
         background-color: $white;
         color: $text-color;
+        transform: translateY(-50px);
         transition: all 0.3s ease 0s;
 
         @include breakpoint($tablet) {
